@@ -46,17 +46,12 @@ class PicoScopeInterface(ScopeTemplate, Plugin):
         self.advancedSettings = None
         self.setCurrentScope(self.findParam('type').getValue())
 
-    def passUpdated(self, lst, offset):
-        self.datapoints = lst
-        self.offset = offset
-        self.dataUpdated.emit(lst, offset)
-
     def setCurrentScope(self, scope):
         if self.scopetype is not None:
-            self.scopetype.dataUpdated.disconnect(self.passUpdated)
+            self.scopetype.dataUpdated.disconnect(self.dataUpdated.emit)
         self.scopetype = scope
         if scope is not None:
-            self.scopetype.dataUpdated.connect(self.passUpdated)
+            self.scopetype.dataUpdated.connect(self.dataUpdated.emit)
 
     def _con(self):
         if self.scopetype is not None:
@@ -69,12 +64,6 @@ class PicoScopeInterface(ScopeTemplate, Plugin):
             self.scopetype.dis()  
         return True
 
-    def doDataUpdated(self, l, offset=0):
-        self.datapoints = l
-        self.offset = offset
-        if len(l) > 0:
-            self.dataUpdated.emit(l, offset)
-
     def arm(self):
         try:
             self.scopetype.arm()
@@ -82,9 +71,6 @@ class PicoScopeInterface(ScopeTemplate, Plugin):
             self.dis()
             raise
 
-    def capture(self, update=True, NumberPoints=None):
+    def capture(self, update=True, numberPoints=None):
         """Raises IOError if unknown failure, returns 'True' if successful, 'False' if timeout"""
-        return self.scopetype.capture(update, NumberPoints)
-
-    def getSampleRate(self):
-        return self.scopetype.findParam('samplerate')
+        return self.scopetype.capture(update, numberPoints)
