@@ -1145,20 +1145,20 @@ class OpenADCInterface(object):
         # Flush output FIFO
         self.sendMessage(CODE_READ, ADDR_ADCDATA, None, False, None)
 
-    def readData(self, NumberPoints=None, progressDialog=None):
+    def readData(self, numberPoints=None, progressDialog=None):
         datapoints = []
 
-        if NumberPoints == None:
-            NumberPoints = 0x1000
+        if numberPoints == None:
+            numberPoints = 0x1000
 
         if self.ddrMode:
             # We were passed number of samples to read. DDR interface
             # reads 3 points per 4 bytes, and reads in blocks of
             # 256 bytes (e.g.: 192 samples)
-            NumberPackages = NumberPoints / 192
+            NumberPackages = numberPoints / 192
 
             # If user requests we send extra then scale back afterwards
-            if (NumberPoints % 192) > 0:
+            if (numberPoints % 192) > 0:
                 NumberPackages = NumberPackages + 1
 
             start = 0
@@ -1177,8 +1177,8 @@ class OpenADCInterface(object):
             # We get 3 samples in each word returned (word = 4 bytes)
             # So need to convert samples requested to words, rounding
             # up if we request an incomplete number
-            nwords = NumberPoints / 3
-            if NumberPoints % 3:
+            nwords = numberPoints / 3
+            if numberPoints % 3:
                 nwords = nwords + 1
 
             # Return 4x as many bytes as words, +1 for sync byte
@@ -1202,7 +1202,7 @@ class OpenADCInterface(object):
             #If bytesToRead is huge, we only read what is needed
             #Bytes get packed 3 samples / 4 bytes
             #Add some extra in case needed
-            hypBytes = (NumberPoints * 4)/3 + 256
+            hypBytes = (numberPoints * 4) / 3 + 256
 
             bytesToRead = min(hypBytes, bytesToRead)
 
@@ -1224,12 +1224,12 @@ class OpenADCInterface(object):
         # for point in datapoints:
         #       print "%3x"%(int((point+0.5)*1024))
 
-        if len(datapoints) > NumberPoints:
-            datapoints = datapoints[0:NumberPoints]
+        if len(datapoints) > numberPoints:
+            datapoints = datapoints[0:numberPoints]
 
-        # if len(datapoints) < NumberPoints:
+        # if len(datapoints) < numberPoints:
         # print len(datapoints),
-        # print NumberPoints
+        # print numberPoints
 
         return datapoints
 
