@@ -14,6 +14,7 @@ V3.1.9:
 - Added buttons to load and save settings.
 - Project settings saved with the traces during capture.
 - Logging.
+- Sample rate is now being saved with the Traces and also propagated in the TraceSource/TraceObserver chain.
 - Trace Output Plot widget with new parameter: X Axis with time values.
 
 V3.1.8:
